--- a/scss/05-Components/_App-Bar.scss
+++ b/scss/05-Components/_App-Bar.scss
@@ -1,4 +1,5 @@
 .app-bar {
+    background-color: white;
     border-top: 1px solid rgba($color: $dark-blue, $alpha: .12);
     position: fixed;
     bottom: 0;
@@ -6,6 +7,7 @@
     left: 0;
     height: 50px;
     display: none;
+    z-index: 700;
 
     @include md_view() {
         display: block;
