--- a/scss/03-Layout/_Sidebar.scss
+++ b/scss/03-Layout/_Sidebar.scss
@@ -4,23 +4,65 @@
     height: 100vh;
     overflow-y: auto;
     overflow-x: hidden;
+    transition: all 0.3s ease-in-out;
 
     @include md_view() {
-        display: none;
+        background-color: white;
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 600;
+        transform: translateY(100%);
+
+        &.open {
+            transform: translateY(0);
+        }
     }
 
     @include sm_view() {
-        display: none;
+        background-color: white;
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 600;
+        transform: translateY(100%);
+
+        &.open {
+            transform: translateY(0);
+        }
     }
 
     @include xs_view() {
-        display: none;
+        background-color: white;
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 600;
+        transform: translateY(100%);
+
+        &.open {
+            transform: translateY(0);
+        }
     }
 
     /* Sidebar: Header */
     &__header {
         padding: 30px;
         padding-bottom: 15px;
+
+        @include sm_view() {
+            padding: 15px;
+        }
+        
+        @include xs_view() {
+            padding: 15px;
+        }
     }
 
     /* Sidebar: Header: Title */
@@ -70,6 +112,24 @@
     /* Sidebar: Navigation */
     &__nav {
         margin: 20px 0;
+
+        @include md_view() {
+            height: calc(100vh - 233px);
+            overflow-y: auto;
+            overflow-x: hidden;
+        }
+        
+        @include sm_view() {
+            height: calc(100vh - 233px);
+            overflow-y: auto;
+            overflow-x: hidden;
+        }
+        
+        @include xs_view() {
+            height: calc(100vh - 233px);
+            overflow-y: auto;
+            overflow-x: hidden;
+        }
     }
 
     /* Sidebar: Navigation: Link */
@@ -82,6 +142,14 @@
         position: relative;
         display: block;
         margin-bottom: 10px;
+        
+        @include sm_view() {
+            padding: 15px;
+        }
+        
+        @include xs_view() {
+            padding: 15px;
+        }
 
         &--active {
             background-color: rgba($color: $dark-blue, $alpha: .03);
@@ -95,6 +163,18 @@
                 position: absolute;
                 top: 0;
                 right: -2px;
+
+                @include md_view() {
+                    width: 6px;
+                }
+
+                @include sm_view() {
+                    width: 6px;
+                }
+                
+                @include xs_view() {
+                    width: 6px;
+                }
             }
         }
 
@@ -110,6 +190,18 @@
                 position: absolute;
                 top: 0;
                 right: -2px;
+
+                @include md_view() {
+                    width: 6px;
+                }
+                
+                @include sm_view() {
+                    width: 6px;
+                }
+                
+                @include xs_view() {
+                    width: 6px;
+                }
             }
         }
     }
